# pyhelper

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CNAME  CODE_OF_CONDUCT.md  HISTORY.md  README-chinese.md  README.md  TKhelper.py  __init__.py  constant.py  dtyping.py  gamehelper.py  heads.py  main.py  mathhelper.py  pghelper.py  pgwidgets.py  pyproject.toml  requirements.txt  setup.py  test_all.py  true_random.py
Docs/: index.html  pyhelper.html  search.js
Docs/pyhelper/: color.html  gamehelpers.html  mathhelper.html  namespace.html  random.html  tkhelper.html
Docs/pyhelper/gamehelpers/: pghelper.html
Docs/pyhelper/gamehelpers/pghelper/: widgets.html
Web/: index.html  scripts.js  styles.css
docs/: Pyhelper Doc.html  Pyhelper GameHelper Doc.html  Pyhelper Heads Doc.html  Pyhelper MathHelper Doc.html  Pyhelper PgHelper Doc.html  Pyhelper PgWidgets Doc.html  Pyhelper TkHelper Doc.html
gamehelpers/: __init__.py
gamehelpers/pghelper/: __init__.py  widgets.py
pyhelper/: AUTHORS.md  CODE_OF_CONDUCT.md  HISTORY.md  LICENSE  README-chinese.md  README.md  TKhelper.py  __init__.py  color.json  color.py  constant.py  mathhelper.py  namespace.py  random.py  requirements.txt  tk.py  tkhelper.py  true_random.py  type.py
pyhelper/gamehelpers/: __init__.py
pyhelper/gamehelpers/pghelper/: __init__.py  widgets.py
tests/: test.py  test_TKhelper.py  test_all.py  test_color.py  test_constant.py  test_mathhelper.py  test_pyhelper.py  test_pyhelper1.py  test_pyhelper2.py  test_pyhelper3.py
