[project]
name = "pyhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.autoflake]
remove_unused_imports = true
remove_unused_variables = true