[project]
name = "pyhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywin32>=310",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = []

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.autoflake]
remove_unused_imports = true
remove_unused_variables = true
